<resources>
    <string name="app_name">Calculator</string>
    <string name="textview">Just Text</string>
    <string name="numbers" />
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">:</string>
    <string name="equals">=</string>
    <string name="clear">clear</string>
    <string name="erase">erase</string>
    <string name="dot">.</string>
</resources>