<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context="my.awesome.myapplication.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="180dp"
        android:maxHeight="180dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray2"
            android:gravity="top|left"
            android:fontFamily="@font/aldrich"
            android:text="@string/numbers"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="NestedWeights,RtlHardcoded,SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="top|left"
            android:background="@color/gray2"
            android:fontFamily="@font/aldrich"
            android:text="@string/numbers"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/clear"
            android:textColor="@color/red"
            android:textSize="35sp"
            tools:ignore="NestedWeights,TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:id="@+id/erase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/erase"
            android:textColor="@color/white"
            android:textSize="35sp"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:id="@+id/number_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/number_7"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:id="@+id/number_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/number_8"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:id="@+id/number_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/number_9"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:id="@+id/divide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/divide"
            android:textColor="@color/blue"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:id="@+id/number_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/number_4"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:id="@+id/number_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/number_5"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:id="@+id/number_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/number_6"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:id="@+id/multiply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/multiply"
            android:textColor="@color/blue"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:id="@+id/number_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/number_1"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:id="@+id/number_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/number_2"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:id="@+id/number_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/number_3"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:id="@+id/dot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/dot"
            android:textColor="@color/blue"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:id="@+id/plus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/plus"
            android:textColor="@color/blue"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights,TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"

            android:layout_marginEnd="10dp"
            android:id="@+id/number_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/number_0"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:id="@+id/minus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/minus"
            android:textColor="@color/blue"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            style=""
            android:layout_weight="1"
            android:id="@+id/equals"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>